--- a/src/main/resources/datasource-config.properties
+++ b/src/main/resources/datasource-config.properties
@@ -1,6 +1,6 @@
-url=jdbc:mysql://101.34.207.32:3306/stu_mybatis?connectTimeout=20000
+url=jdbc:mysql://101.34.207.32:3306/peoplemanagement?connectTimeout=20000
+username=root
 password=huanghengliang2001
-user=root
 driverClassName=com.mysql.cj.jdbc.Driver
 defaultAutoCommit=true
 initialSize=10
