--- a/pom.xml
+++ b/pom.xml
@@ -174,8 +174,16 @@
       <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
-
-
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.1.4</version>
+    </dependency>
 
   </dependencies>
 
