未加事务的版本

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 # Datasource local storage ignored files
 /../../../../../../:\Users\27529\IdeaProjects\PeopleManagement\.idea/dataSources/
 /dataSources.local.xml
