修改查询信息表

--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,15 @@
       <version>2.13.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.13.1</version>
+    </dependency>
+
+
+
     <!-- https://mvnrepository.com/artifact/org.reactivestreams/reactive-streams -->
     <dependency>
       <groupId>org.reactivestreams</groupId>
